--- a/assets/views/quality-verification/quality-verification.html
+++ b/assets/views/quality-verification/quality-verification.html
@@ -1,9 +1,9 @@
 <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
-    <h4 class="mg-b-0 tx-spacing--1">Quality Verfication</h4>
+    <h4 class="mg-b-0 tx-spacing--1">BIC Code Recognition</h4>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb breadcrumb-style1 mg-b-10">
             <li class="breadcrumb-item">Home</li>
-            <li class="breadcrumb-item active" aria-current="page">Quality Verfication</li>
+            <li class="breadcrumb-item active" aria-current="page">BIC Code Recognition</li>
         </ol>
     </nav>
 </div>
