update quality-verification: centering image modal

--- a/assets/views/quality-verification/quality-verification.html
+++ b/assets/views/quality-verification/quality-verification.html
@@ -48,7 +48,9 @@
                 </button>
             </div>
             <div class="modal-body">
-                <img class="img-fluid" ng-src="{{imgView.imgUrl}}">
+                <div class="text-center">
+                    <img class="img-fluid" ng-src="{{imgView.imgUrl}}">
+                </div>
                 <div class="table-responsive">
                     <table class="table table-dashboard mg-b-0 tr-fixed-table">
                         <tbody>
