--- a/assets/views/quality-verification/quality-verification.html
+++ b/assets/views/quality-verification/quality-verification.html
@@ -9,11 +9,14 @@
 </div>
 <div id="imageLoader"></div>
 <div class="row row-xs mg-t-10">
-    <div class="card col-xl-10">
+    <div class="card col-xl-8">
         <h6 class="card-header pd-t-20 pd-b-0 bd-b-0">List of Data</h6>
-        <div class="card-body pd-20 ">
-            <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance">
-            </table>
+        <div class="card-body pd-20">
+            <div class="table-responsive">
+                <table class="table" datatable="" dt-options="dtOptions" dt-columns="dtColumns"
+                    dt-instance="dtInstance">
+                </table>
+            </div>
         </div>
     </div>
 </div>
