update video-streaming: add delay

--- a/assets/views/video-streaming/video-streaming.html
+++ b/assets/views/video-streaming/video-streaming.html
@@ -7,12 +7,11 @@
         </ol>
     </nav>
 </div>
-<div class="row">
-    <div class="col-md-6">
+<div class="row row-xs">
+    <div class="col-lg-5">
         <div class="card">
             <h6 class="card-header pd-t-20 pd-b-0 bd-b-0">Video Capture</h6>
             <div class="card-body">
-
                 <form name="formVideoStream" class="form-inline mg-b-10" ng-submit="toggle()">
                     <div class="form-group mg-r-20">
                         <label class="mg-r-10" for="path">Path</label>
@@ -29,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-7 mg-t-10 mg-lg-t-0">
         <div class="card">
             <h6 class="card-header pd-t-20 pd-b-0 bd-b-0">List of Data</h6>
             <div class="card-body pd-20">
