update video-streaming: add image viewer

--- a/assets/views/video-streaming/video-streaming.html
+++ b/assets/views/video-streaming/video-streaming.html
@@ -41,3 +41,36 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="modalViewImage" tabindex="-1" role="dialog" aria-labelledby="modalViewImage"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title" id="exampleModalLabel2">Show Image</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="text-center">
+                    <img class="img-fluid" ng-src="{{imgView.imgUrl}}">
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-dashboard mg-b-0 tr-fixed-table">
+                        <tbody>
+                            <tr>
+                                <th>Date</th>
+                                <td class="text-right ng-binding">{{imgView.date | date : 'medium'}}</td>
+                            </tr>
+                            <tr>
+                                <th>Code</th>
+                                <td class="text-right ng-binding">{{imgView.code}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
